--- a/Abby_RazorPage_Mike/appsettings.json
+++ b/Abby_RazorPage_Mike/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Abby;Trusted_Connection=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Abby;Trusted_Connection=True"
   }
 }
