4-2-1 Move Model Data single project

--- a/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
+++ b/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
@@ -15,4 +15,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Abby.Models\Abby.Models.csproj" />
+	</ItemGroup>
+
 </Project>
