4-4 Organize Admin and Customer Folder

--- a/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
+++ b/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
@@ -20,4 +20,8 @@
 	  <ProjectReference Include="..\Abby.Models\Abby.Models.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Pages\Customer\" />
+	</ItemGroup>
+
 </Project>
