--- a/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
+++ b/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
@@ -7,6 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="Pages\Customer\Home\Details.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
@@ -22,6 +26,18 @@
 
 	<ItemGroup>
 	  <Folder Include="wwwroot\images\menuitems\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <UpToDateCheckInput Remove="Pages\Customer\Home\Details.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="Pages\Customer\Home\Details.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Pages\Customer\Home\Details.cshtml" />
 	</ItemGroup>
 
 </Project>
