--- a/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
+++ b/Abby_RazorPage_Mike/Abby_RazorPage_Mike.csproj
@@ -22,6 +22,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Abby.DataAccess\Abby.DataAccess.csproj" />
 	  <ProjectReference Include="..\Abby.Models\Abby.Models.csproj" />
+	  <ProjectReference Include="..\Abby.Utility\Abby.Utility.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
